--- a/Sejong/scss/__var.scss
+++ b/Sejong/scss/__var.scss
@@ -96,3 +96,16 @@
         }
     }
 }
+
+@mixin skip {
+    overflow: hidden;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: 0;
+    padding: 0;
+    background: none;
+    font-size: 3px;
+    color: transparent;
+    line-height: 0;
+}
