--- a/Sejong/scss/main.scss
+++ b/Sejong/scss/main.scss
@@ -871,16 +871,16 @@
     .section_service .wrapper {
         position: relative;
     }
-    .section_service .wrapper ul li.view {
+    .section_service .wrapper ul li a i.view {
         position: absolute;
         top: 0;
         right: 0;
     }
-    .section_service .wrapper ul li.view a i {
+    .section_service .wrapper ul li a i.view {
         width: 2.35rem;
         height: 2.35rem;
     }
-    .section_service .wrapper ul li.view a span {
+    .section_service .wrapper ul li:last-child span {
         display: none;
     }
     .section_service .wrapper ul {
@@ -950,6 +950,9 @@
 }
 
 @media screen and (max-width:600px){
+    .visual .visual_popup .swiper {
+        height: 178px;
+    }
     .section_news .wrapper .today_news .news_layer .tab_content {
         padding: 0 1.17em 1.41em 1.17em;
     }
@@ -995,6 +998,20 @@
         top: 50%;
     }
 }
+@media screen and (max-width:430px){
+    .section_eventbanner .wrapper .left_human {
+        top: 70%;
+    }
+    .section_eventbanner .wrapper .right_human {
+        top: 67%;
+    }
+    .section_sejong_tv .wrapper .sns_content .sns {
+        padding: 1.35em;
+    }
+    .section_sejong_tv {
+        padding: 2.82em 0 2.76em 0;
+    }
+}
 @media screen and (max-width:360px){
     .section_eventbanner .wrapper .left_human {
         top: 78%;
@@ -1004,9 +1021,6 @@
     }
     .section_visual .serach .serach_content {
         flex-direction: column;
-    }
-    .section_sejong_tv .wrapper .sns_content .sns {
-        padding: 1.35em;
     }
 }
 
