--- a/Sejong/scss/__default.scss
+++ b/Sejong/scss/__default.scss
@@ -50,6 +50,7 @@ em, address, i {
 }
 button {
     border: 0;
+    font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
     line-height: inherit;
