--- a/myprot/scss/__font.scss
+++ b/myprot/scss/__font.scss
@@ -10,3 +10,9 @@
 	font-display: swap;
 	src: local('Pretendard Regular'), url(../fonts/Pretendard-Regular.woff2) format('woff2'), url(../fonts/Pretendard-Regular.woff) format('woff');
 }
+@font-face {
+	font-family: "DungGeunMo";
+	font-weight: 400;
+	font-display: swap;
+	src: local('Pretendard Regular'), url(../fonts/DungGeunMo.woff2) format('woff2'), url(../fonts/DungGeunMo.woff) format('woff');
+}
