--- a/myprot/scss/__common.scss
+++ b/myprot/scss/__common.scss
@@ -19,6 +19,7 @@ $header-h: 90px;
 
 /* 컬러 */
 $primary-color-50: #1040FF;
+$hover-color-50: #002CDB;
 $title-color: #1D1D1D;
 $body-color: #555;
 $disalbe:#E4E4E4;
